<resources>
    <string name="app_name">Kantin</string>
    <string name="halo_polije">Halo POLIJE !</string>
    <string name="kantiners">Aplikasi untuk KANTINERS yang terlalu Mager</string>
    <string name="masuk">Masuk</string>
    <string name="not_a_member_register">Belum punya akun? <b><font fgcolor='#3CDA85'>Daftar.</font></b></string>
    <string name="salam_sapa">Selamat Datang</string>
    <string name="ID_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="nama_hint">Nama Lengkap</string>
    <string name="email_hint">Email</string>
    <string name="nomor_hint">Nomor Telepon</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="register_member">Registrasi Anggota</string>
    <string name="daftar">Daftar</string>
    <string name="todo">TODO</string>
    <string name="kedai">Daftar Kedai</string>
    <string name="food_image">Food Image</string>
    <string name="rupiah_simbol">Rp </string>
    <string name="_0">0</string>
    <string name="updating_menu">Updating Menu</string>
    <string name="loading">Loading...</string>
    <string name="view_cart">View Cart</string>
    <string name="sort_food">Sort Food</string>
    <string name="sort_price">Sort by price low to high</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="discount">Discount</string>
    <string name="cart_total">Cart Total</string>
    <string name="bill_details">Bill Details</string>
    <string name="coupon">Coupon</string>
    <string name="your_cart">Your Cart</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

</resources>
