<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/register_member"
                android:textColor="@color/colorTitle"
                android:textSize="30dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/register_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/nama_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/InputNama"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/nama_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15dp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ID_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/nama_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/InputID"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/ID_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15dp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/ID_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/InputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorTitle"
                            android:textSize="15dp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/daftar_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/register_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/daftar_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/daftar"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>